correction for contrast

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@
   height: 100%;
   width: 100%;
 }
+.bold {
+  font-weight: bold;
+}
 
 body {
   margin: 0;
@@ -105,6 +108,7 @@ a:hover {
 
 .texture-paper::before {
   background: url("../img/texture-paper.webp");
+  opacity: 0.5;
   background-size: 280px 280px;
 }
 
@@ -208,7 +212,7 @@ a:hover {
 
 .d-bloc .panel,
 .l-bloc {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.54);
 }
 
 .d-bloc .panel button:hover,
@@ -666,7 +670,7 @@ label,
 a {
   font-family: "helvetica";
   font-weight: 400;
-  color: #575757 !important;
+  color: #000000 !important;
 }
 
 .container {
@@ -751,11 +755,12 @@ h4 {
 }
 
 .black{
-  color: #333333  !important ;
+  color: #000000  !important ;
 }
 
 .white {
   color: #ffffff !important;
+  z-index: 99999;
 }
 
 .portfolio-thumb {
@@ -794,7 +799,7 @@ h4 {
 }
 
 .tc-white {
-  color: #f3976c !important;
+  color: #ffffff !important;
 }
 
 .btn-atomic-tangerine {
